--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -10,7 +10,7 @@
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    background-color: $menuBg;
+background-color: #69e5c2;
     height: 100%;
     position: fixed;
     font-size: 0px;
@@ -19,6 +19,7 @@
     left: 0;
     z-index: 1001;
     overflow: hidden;
+    
 
     // reset element-ui css
     .horizontal-collapse-transition {
@@ -27,6 +28,7 @@
 
     .scrollbar-wrapper {
       overflow-x: hidden !important;
+      background: url('~@/assets/common/leftnavBg.png') no-repeat 0 100%;
     }
 
     .el-scrollbar__bar.is-vertical {
@@ -66,6 +68,32 @@
       border: none;
       height: 100%;
       width: 100% !important;
+      background-color:#69e5c2!important;
+      a{
+        li{
+          .svg-icon{
+            color: #fff;
+            font-size: 18px;
+            vertical-align: middle;
+            .icon{
+              color:#fff;
+            }
+          }
+          span{
+            color: #fff;
+          }
+          &:hover{
+            .svg-icon{
+              color: #60ccad;
+
+            }
+            span{
+              color: #60ccad;
+              
+            }
+          }
+        }
+      }
     }
 
     // menu hover
